<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.AndroidProject.AppBarOverlay"
        app:layout_constraintEnd_toEndOf="@+id/drawing_view"
        app:layout_constraintStart_toStartOf="@+id/drawing_view"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/purple_700"
            app:popupTheme="@style/Theme.AndroidProject.PopupOverlay">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/Main_Toolbar"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <com.example.androidpainting.DrawingView
        android:id="@+id/drawing_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/content_color"
        app:backgroundTint="#000000"
        app:fabSize="mini"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_erase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/content_erase"
        app:backgroundTint="#FFFFFF"
        app:fabSize="mini"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout" />

    <LinearLayout
        android:id="@+id/popup_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fab_color">

        <com.google.android.material.slider.Slider
            android:id="@+id/red_slider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/red_chosen"
            android:stepSize="1"
            android:valueFrom="0"
            android:valueTo="255"
            app:thumbColor="#FF0000"
            app:trackColor="#FF8080" />

        <com.google.android.material.slider.Slider
            android:id="@+id/green_slider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/green_chosen"
            android:stepSize="1"
            android:valueFrom="0"
            android:valueTo="255"
            app:thumbColor="#00FF00"
            app:trackColor="#80FF80" />

        <com.google.android.material.slider.Slider
            android:id="@+id/blue_slider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/blue_chosen"
            android:stepSize="1"
            android:valueFrom="0"
            android:valueTo="255"
            app:thumbColor="#0000FF"
            app:trackColor="#8080FF" />

        <com.google.android.material.slider.Slider
            android:id="@+id/size_slider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/size_chosen"
            android:stepSize="1"
            android:value="20"
            android:valueFrom="1"
            android:valueTo="50"
<<<<<<< HEAD
            app:thumbColor="@color/black" />
=======
            app:thumbColor="@color/black"
            app:trackcolor="@color/black"/>
>>>>>>> 59b6cd8 (Initial commit)
    </LinearLayout>

    <Button
        android:id="@+id/func_clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/func_clear"
        app:layout_constraintVertical_bias="0.95"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>